--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   <!-- <div class="white-space-50"></div> -->
 
                   <!-- Pricing -->
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="col-xs-12 col-sm-12">
 
                       <div class="block-title">
@@ -461,7 +461,7 @@
 
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <!-- End of Pricing -->
 
                   <div class="white-space-50"></div>
